--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family: sans-serif;
 
 }
-body{
+
+body {
     background-color: #171616;
 }
-.card{
+
+.card {
     width: 90%;
     max-width: 470px;
     margin: 20px auto;
@@ -18,13 +20,15 @@ body{
     color: white;
     text-align: center;
 }
-.search{
+
+.search {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.search input{
+
+.search input {
     height: 60px;
     padding: 10px 25px;
     border: 0;
@@ -36,7 +40,8 @@ body{
     margin-right: 10px;
     font-size: 17px;
 }
-.search button{
+
+.search button {
     border: 0;
     outline: 0;
     background-color: #ebfffc;
@@ -45,67 +50,78 @@ body{
     width: 60px;
     cursor: pointer;
 }
-.search button img{
+
+.search button img {
     width: 30px;
 }
-.weather-icon{
+
+.weather-icon {
     width: 170px;
     margin-top: 30px;
 }
 
-.weather h1{
+.weather h1 {
     font-size: 80px;
     font-weight: 500;
     margin-top: 10px;
 }
-.weather h2{
+
+.weather h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: 1rem;
 }
-.details{
+
+.details {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 20px;
     margin-top: 50px;
 }
-.col{
+
+.col {
     display: flex;
     align-items: center;
     text-align: left;
 }
-.col img{
+
+.col img {
     width: 60px;
     margin-right: 10px;
 }
-.humidity,.wind{
+
+.humidity,
+.wind {
     font-size: 20px;
     margin-top: -10px;
 }
 
-.error{
+.error {
     font-size: 20px;
     text-align: center;
     margin-top: 10px;
     display: none;
 }
 
-.weather{
+.weather {
     display: none;
 }
-.weather h3{
+
+.weather h3 {
     margin-top: -4px;
     font-size: 18px;
 }
-body h1{
+
+body h1 {
     color: white;
     text-align: center;
     margin-top: 50px;
     font-size: 40px;
-    
+
 }
-body h3{
+
+body h3 {
     color: white;
     text-align: center;
     margin-top: 10px;
@@ -114,84 +130,96 @@ body h3{
 }
 
 @media (max-width: 480px) {
-    .card{
+    .card {
         width: 300px;
         height: 20px;
-        
+
     }
-    .search{
+
+    .search {
         width: 10px;
         height: 10px;
         margin-right: 2rem;
-    }    
-    .search input{
+    }
+
+    .search input {
         width: 240px;
         height: 30px;
         margin-left: -26px;
     }
-    .search button{
+
+    .search button {
         width: 70px;
         height: 35px;
         padding: 5px;
         margin-left: -7px;
-        
+
     }
-    .search button img{
+
+    .search button img {
         width: 24px;
     }
 
-    .weather{
+    .weather {
         width: 20px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    .details{
+
+    .details {
         display: flex;
         flex-direction: column;
         align-items: start;
         justify-content: center;
-        
-        
-        
+
+
+
     }
-    .details .col{
+
+    .details .col {
         margin-top: 20px;
         margin-bottom: 10px;
         margin-right: 400px;
         margin-left: 40px;
     }
-    .weather-icon{
+
+    .weather-icon {
         width: 100px;
         margin-left: 70px;
     }
-    .weather h1{
+
+    .weather h1 {
         font-size: 50px;
         margin-left: 60px;
     }
-    .weather h2{
+
+    .weather h2 {
         font-size: 30px;
         margin-left: 70px;
         text-align: center;
     }
-    .weather h3{
+
+    .weather h3 {
         margin-left: 96px;
     }
-    .footer{
+
+    .footer {
         display: none;
     }
-    .weather{
+
+    .weather {
         display: none;
     }
-    body{
-        background-color: rgb(46, 63, 130);
+
+    body {
+        background: rgb(2, 0, 36);
+        background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 29%, rgba(0, 212, 255, 1) 91%);
     }
-    .footer{
+
+    .footer {
         display: block;
         margin-top: 35rem;
     }
 
 }
-
-
-
