--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
     width: 90%;
     max-width: 470px;
     margin: 20px auto;
-    background-color: rgb(65, 116, 146);
+    background: rgb(2, 0, 36);
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 29%, rgba(0, 212, 255, 1) 91%);
     border-radius: 20px;
     padding: 40px 35px;
     color: white;
